--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,3 +1,6 @@
 <% provide(:title, 'About') %>
 <h1>About Us</h1>
-Noobs
+<h2>Is this how you spell Rayls?</h2>
+<h2>Rales.</h2>
+<h2>Rails.</h2>
+<i><h2>Nailed it.</h2></i>
