--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Listing tweets</h1>
 
-<table>
+<table class="table table-striped table-bordered table-condensed">
   <thead>
     <tr>
       <th>Body</th>
