--- a/app/views/twits/_form.html.erb
+++ b/app/views/twits/_form.html.erb
@@ -19,6 +19,10 @@
     <%= f.label :username %><br>
     <%= f.text_field :username %>
   </div>
+  <div class="field">
+    <%= f.label :password %><br>
+    <%= f.password_field :password %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
