--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,5 +5,5 @@
     Welcome to twitz where the tweets are junk and the twits are twits
   </h2>
 
-  <%= link_to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
+  <%= link_to "Sign up now!", new_twit_path, class: "btn btn-large btn-primary" %>
 </div>
