--- a/app/views/twits/new.html.erb
+++ b/app/views/twits/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New twit</h1>
+<h1>New Twit</h1>
 
+<%= render 'shared/error_messages' %>
 <%= render 'form' %>
 
 <%= link_to 'Back', twits_path %>
